workshop03/bgg-app-deploy-old.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
 namespace: bggns
 name: bggapp-deploy-v1
 labels:
  name: bggapp-deploy-v1
spec:
 replicas: 3
 selector: 
  matchLabels:
   name: bggapp-po-v1
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 1
   maxUnavailable: 0
 template:
  metadata:
   name: bggapp-po-v1
   labels:
    name: bggapp-po-v1
  spec: 
   containers:
   - name: bggapp-container-v1
     image: stackupiss/bgg-backend:v1
     args: ["--prefix","/v1"]
     imagePullPolicy: IfNotPresent
     livenessProbe:
      httpGet:
        path: /healthz
        port: 80
     ports: 
     - name: bggapp-port-v1
       containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
 namespace: bggns
 name: bggapp-svc-v1
 labels:
  name: bggapp-svc-v1
spec:
 type: ClusterIP
 selector: 
  name: bggapp-po-v1
 ports:
 - port: 80
   targetPort: bggapp-port-v1


---
apiVersion: apps/v1
kind: Deployment
metadata: 
 namespace: bggns
 name: bggapp-deploy-v2
 labels:
  name: bggapp-deploy-v2
spec:
 replicas: 3
 selector: 
  matchLabels:
   name: bggapp-po-v2
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 1
   maxUnavailable: 0
 template:
  metadata:
   name: bggapp-po-v2
   labels:
    name: bggapp-po-v2
  spec: 
   containers:
   - name: bggapp-container-v2
     image: stackupiss/bgg-backend:v2
     args: ["--prefix","/v2"]
     imagePullPolicy: IfNotPresent
     livenessProbe:
      httpGet:
        path: /healthz
        port: 80
     ports: 
     - name: bggapp-port-v2
       containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
 namespace: bggns
 name: bggapp-svc-v2
 labels:
  name: bggapp-svc-v2
spec:
 type: ClusterIP
 selector: 
  name: bggapp-po-v2
 ports:
 - port: 80 
   targetPort: bggapp-port-v2
