workshop03/bgg-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 namespace: bggns
 name: bggapp-ing
 labels:
  name: bggapp-ing
 annotations:
  nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
 ingressClassName: nginx
 rules:
 - host: bgg-144.126.243.200.nip.io
   http:
    paths:
    - path: /v1
      pathType: Prefix
      backend: 
       service: 
        name: v1-bggapp-svc
        port: 
         number: 8080
    - path: /v2
      pathType: Prefix
      backend: 
       service: 
        name: v2-bggapp-svc
        port: 
         number: 8080
